Update for Patch v3.7.2 - checksum: e793

--- a/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
@@ -408,10 +408,12 @@
  NAME_Yuhtaan_Minoris:0 "Yuhtaan Minoris"
  NAME_Roachoid:0 "Roachoid"
  NAME_Snakeoid:0 "Snakeoid"
+ NAME_Robot_Uprising:0 "Robotic Uprising"
  NAME_Space_Station:0 "Space Station"
  NAME_Industrial_Army:0 "Industrial Army"
  NAME_Post_Atomic_Army:0 "Post-Atomic Army"
  NAME_Primitive_Army:0 "Primitive Army"
+ NAME_Robot_Army:0 "Robot Army"
  NAME_Sobak:0 "Sobak"
  NAME_Radical_Cult:0 "Radical Cult"
  NAME_Cult_Defense_Fleet:0 "Cult Defense Fleet"
