--- a/mod/thmod/localisation/english/ship_browser_l_english.yml
+++ b/mod/thmod/localisation/english/ship_browser_l_english.yml
@@ -10,10 +10,10 @@
  SHIP_GRAPHICS_FRIGATE_DESC:0 "ฟริเกตเป็นรุ่นขั้นสูงกว่าของคอร์เวต เชี่ยวชาญด้านการปล่อยตอร์ปิโด พวกมันอาจช้ากว่าและเปราะบางกว่า แต่สามารถทำลายล้างเป้าหมายขนาดใหญ่ได้"
  SHIP_GRAPHICS_DESTROYER_DESC:1 "ยานพิฆาต เปลี่ยนจากความคล่องตัวและความเร็วของยานคอร์เวต แล้วไปเพิ่มพลังการยิงและตัวยานที่หนาขึ้นแทน"
  SHIP_GRAPHICS_CRUISER_DESC:0 "ยานลาดตระเวณสามารถใช้งานได้หลากหลายและทนทาน สามารถดูดซับและทำความเสียหายได้"
- SHIP_GRAPHICS_BATTLESHIP_DESC:0 "ยานประจัญบานมีราคาแพงแต่ทรงพลัง ด้วยระยะการยิงที่ยอดเยี่ยม พวกเขาเก่งในการสร้างความเสียหายให้ฝ่ายตรงข้ามก่อนที่พวกเขาจะโจมตีกลับ"
+ SHIP_GRAPHICS_BATTLESHIP_DESC:0 "ยานประจัญบานมีราคาแพงแต่ทรงพลัง ด้วยระยะการยิงที่ยอดเยี่ยม พวกมันเก่งในการสร้างความเสียหายให้ฝ่ายตรงข้ามก่อนที่ฝ่ายตรงข้ามจะโจมตีกลับ"
  SHIP_GRAPHICS_TITAN_DESC:1 "แม้ว่าพวกมันจะมีพลังมหาศาลในตัวของมันเอง และไททันยังสามารถใช้ออร่าเพื่อเพิ่มความสามารถให้แก่ยานที่เป็นมิตรรอบๆยานไททันได้"
  SHIP_GRAPHICS_JUGGERNAUT_DESC:1 "การสร้างยานจักเกอร์น็อทเป็นภารกิจที่ยอดเยี่ยมสำหรับจักรวรรดิ ยานขนาดใหญ่นี้ทำหน้าที่เป็นทั้งอู่ต่อยานเคลื่อนที่และยานสนับสนุน"
- SHIP_GRAPHICS_COLOSSUS_DESC:1 "ยานขนาดมหึมานี้ไม่ได้ติดตั้งอาวุธเพื่อสู้กับกองยานศัตรู แต่หน้าที่ของมันคือทำลายล้างโลกทั้งใบ"
+ SHIP_GRAPHICS_COLOSSUS_DESC:1 "ยานขนาดมหึมานี้ไม่ได้ติดตั้งอาวุธเพื่อสู้กับกองยานศัตรู แต่หน้าที่ของมันคือทำลายล้างดาวทั้งดวง"
  SHIP_GRAPHICS_OUTPOST_DESC:0 "สถานีด่านหน้าคือระดับขั้นต่ำที่สุดของฐานอวกาศ โดยมีหน้าที่เล็กน้อย ยกเว้นการสร้างความเป็นเจ้าของระบบดาว"
  SHIP_GRAPHICS_STARBASE_CITADEL_DESC:0 "ป้อมปราการอวกาศเป็นระดับขั้นสูงสุดของฐานอวกาศที่สามารถอัปเกรดได้ พร้อมกับการป้องกันขนาดใหญ่ ป้อมปราการอวกาศ คือสิ่งที่ศัตรู ยากจะจัดการได้"
  SHIP_GRAPHICS_TRANSPORT_DESC:0 "ยานขนส่งลำเลียงกองทัพเพื่อโจมตีดาวเคราะห์ศัตรูระหว่างสงคราม เนื่องจากไม่ได้ติดตั้งอาวุธ พวกมันต้องการกองยานสนับสนุนเมื่ออยู่ในเขตแดนศัตรู"
