--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -22,8 +22,8 @@
  is_not_a_standard_planet_or_megastructure:1 "§R$TRIGGER_FAIL$Target is not a standard planetary body or habitable megastructure§!"
  is_not_a_habitable_planet_or_megastructure:0 "§R$TRIGGER_FAIL$Target is not a habitable planet or megastructure§!"
  is_not_a_standard_planet:0 "§R$TRIGGER_FAIL$Target is not a standard planetary body§!"
- is_not_hostile_or_primitive:0 "§R$TRIGGER_FAIL$Target is not owned by a Primitive or hostile Empire§!"
- is_not_hostile_or_primitive_or_ours:0 "§R$TRIGGER_FAIL$Target is neither within our borders, nor owned by a Primitive or hostile Empire§!"
+ is_not_hostile_or_primitive:1 "§R$TRIGGER_FAIL$Target is not owned by a Pre-FTL or hostile Empire§!"
+ is_not_hostile_or_primitive_or_ours:1 "§R$TRIGGER_FAIL$Target is neither within our borders, nor owned by a Pre-FTL or hostile Empire§!"
  is_shielded:0 "§R$TRIGGER_FAIL$Target is permanently Shielded§!"
  is_not_hostile:0 "§R$TRIGGER_FAIL$Target is not owned by a hostile Empire§!"
  is_unpopulated:0 "§R$TRIGGER_FAIL$Target is unpopulated§!"
@@ -37,9 +37,9 @@
  is_uninhabited_within_borders:0 "Target is uninhabited and within the [From.Owner.GetName]"
  not_barren_molten_frozen_toxic_test_fire:3 "Target must be one of the following to be a test fire candidate:\n$tt$§H- Uninhabited Habitable World§!\n$tt$§H- $pc_barren$§!\n$tt$§H- $pc_molten$§!\n$tt$§H- $pc_frozen$§!\n$tt$§H- $pc_toxic$§!"
  not_owned_test_fire:0 "Target is an §Yowned colony§! test fire target"
- primitives_not_in_borders:0 "§R$TRIGGER_FAIL$Primitive target is not within our borders§!"
- primitives_not_full_interference:0 "§R$TRIGGER_FAIL$Requires §Y$interference_full$§! $policy_interference$ policy§!"
- primitives_not_active_or_full_interference:0 "§R$TRIGGER_FAIL$Requires §Y$interference_active$§! or §Y$interference_full$§! $policy_interference$ policy§!"
+ primitives_not_in_borders:1 "§R$TRIGGER_FAIL$Pre-FTL target is not within our borders§!"
+ primitives_not_full_interference:0 "§R$TRIGGER_FAIL$Requires §Y$interference_aggressive$§! $policy_interference$ policy§!"
+ primitives_not_active_or_full_interference:0 "§R$TRIGGER_FAIL$Requires §Y$interference_active$§! or §Y$interference_aggressive$§! $policy_interference$ policy§!"
  no_assimilatable_pops:0 "§R$TRIGGER_FAIL$Target does not house any Pops suitable for cybernetic assimilation§!"
  enable_colossus_project:0 "§Hออกโครงการพิเศษ:§! โครงการโคลอสซัส\n\n"
  describe_colossus_project:0 "เสร็จสิ้น §Yโครงการโคลอสซัส§! เพื่อปลดล็อก §Hยานประเภท§! §Yโคลอสซัส§! ที่สามารถติด §Rอาวุธทำลายดาวเคราะห์§! ได้"
@@ -74,6 +74,7 @@
  apoc.110.neutron.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_NEUTRON_DESC$§!"
  apoc.110.godray.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_GODRAY_DESC$§!"
  apoc.110.nanobots.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_NANOBOTS_DESC$§!"
+ apoc.110.devolution.tooltip:0 "§RPlanet-Killer Weapon§!:\n§L$PLANET_KILLER_DEVOLUTION_DESC$§!"
  apoc.120.name:0 "Colossus Project Completed"
  apoc.120.desc:0 "$apoc.120.part.p1$"
  apoc.120.desc.milit:0 "$apoc.120.part.p1$ $apoc.120.part.milit$"
@@ -163,6 +164,7 @@
  STARBASE_NAME:1 "$NAME$"
  STARBASE_STATION_NAME_FORMAT:0 "สถานี $SYSTEM$"
  STARBASE_QUEUE:0 "คิวในฐานอวกาศ"
+ STARBASE_MODIFIERS:0 "Starbase Modifiers"
  DEFENSE_QUEUE:0 "คิวระบบป้องกัน"
  SHIPYARD_QUEUE:0 "คิวอู่ต่อยาน"
  STARBASE_TRIGGER_HAS_NOT_MODULE:0 "Starbase has not module $COMPONENT|Y$"
@@ -191,6 +193,11 @@
  STARBASE_BUILDQUEUE_UP:0 "§GClick to move item up.\nShift-click to move item to top.§!"
  STARBASE_BUILDQUEUE_DOWN:0 "§GClick to move item down.\nShift-click to move item to bottom.§!"
  STARBASE_MODIFIER_EFFECTS:0 "เอฟเฟกต์ที่มีการปรับเปลี่ยน"
+ STARBASE_MODIFIER_HYPERLANE_RANGE:0 "£mod_planet_hyperlane_range_add£ Hyperlane Detection Range:"
+ STARBASE_MODIFIER_SENSOR_RANGE:0 "£mod_ship_sensor_range_add£ Sensor Range:"
+ STARBASE_MODIFIER_PROTECTION:0 "£mod_starbase_trade_protection_add£ Trade Protection:"
+ STARBASE_MODIFIER_PROTECTION_RANGE:0 "£mod_starbase_trade_protection_range_add£ Trade Protection Range:"
+ STARBASE_MODIFIER_COLLECTION_RANGE:0 "£mod_starbase_trade_collection_range_add£ Trade Collection Range:"
  gateway_ruined:0 "เกตเวย์ที่ปิดการใช้งาน"
  gateway_ruined_DESC:0 "The ancient remains of what appears to be a Gateway of some sort. If repaired, this structure could enable starships to rapidly travel to other functional Gateways."
  gateway_ruined_MEGASTRUCTURE_DETAILS:0 ""
@@ -226,6 +233,7 @@
  requires_starhold_or_ring_2:0 "§RRequires §Y$starbase_starhold$§! upgrade or §Y$orbital_ring_tier_2$§!.§!"
  requires_starfortress_or_ring_3:0 "§RRequires §Y$starbase_starfortress$§! upgrade or §Y$orbital_ring_tier_3$§!.§!"
  requires_anchorage:0 "§RRequires §Y$sm_anchorage$§!.§!"
+ requires_detection_array:0 "§RRequires §Y$sm_detection_array$§!.§!"
  requires_colonized_planet:0 "§Rต้องมีดาวเคราะห์ที่เป็นเจ้าของในระบบ§!"
  requires_trade_planet:0 "§RRequires a colonized planet or a §YTrader Enclave§! in the system.§!"
  requires_black_hole:0 "§Rต้องมี §Y$pc_black_hole$§! ในระบบดาว§!"
@@ -295,6 +303,7 @@
  OUTLINER_FLEET_UPGRADABLE:0 "สามารถอัปเกรดกองยานนี้ได้"
  OUTLINER_FLEET_REPAIRABLE:0 "สามารถซ่อมกองยานนี้ได้"
  FLEET_TEMPLATE_SIZE_WITH_LIMIT:1 "£fleet_template_size£ $SIZE_STRING$ $LIMIT_STRING$"
+ FLEET_TEMPLATE_SIZE_WITH_LIMIT_NO_ICON:1 "$SIZE_STRING$ $LIMIT_STRING$"
  FLEET_TEMPLATE_SIZE_LIMIT_REACHED_VALUE_FORMAT:0 "($VALUE$)"
  FLEET_TEMPLATE_SIZE_LIMIT_UNREACHED_VALUE_FORMAT:0 "($VALUE|E$)"
  FLEET_TEMPLATE_MILITARY_POWER:0 "£military_power£ $POWER_STRING$"
@@ -329,19 +338,19 @@
  opinion_converted_a_world:0 "Converted a World"
  opinion_assimilated_my_world:0 "Assimilated our World"
  opinion_assimilated_a_world:0 "Assimilated a World"
- opinion_assimilated_a_primitive_world:0 "Assimilated a Primitive World"
+ opinion_assimilated_a_primitive_world:1 "Assimilated a Pre-FTL World"
  opinion_assimilated_a_primitive_world_phile:0 "$opinion_cracked_a_primitive_world_phile$"
  opinion_shielded_my_world:0 "Shielded our World"
  opinion_shielded_a_world:1 "Shielded a World"
- opinion_cracked_a_primitive_world:0 "Cracked a Primitive World"
+ opinion_cracked_a_primitive_world:1 "Cracked a Pre-FTL World"
  opinion_cracked_a_primitive_world_phile:0 "Obliterated a Budding Civilization"
- opinion_swept_a_primitive_world:0 "Swept a Primitive World"
+ opinion_swept_a_primitive_world:1 "Swept a Pre-FTL World"
  opinion_swept_a_primitive_world_phile:0 "$opinion_cracked_a_primitive_world_phile$"
- opinion_assimiliated_a_primitive_world:0 "Assimilated a Primitive World"
+ opinion_assimiliated_a_primitive_world:1 "Assimilated a Pre-FTL World"
  opinion_assimiliated_a_primitive_world_phile:0 "$opinion_cracked_a_primitive_world_phile$"
  opinion_drenched_a_world:0 "Drenched a World"
  opinion_drenched_my_world:0 "Drenched our World"
- opinion_drenched_a_primitive_world:0 "Drenched a Primitive World"
+ opinion_drenched_a_primitive_world:1 "Drenched a Pre-FTL World"
  opinion_drenched_a_primitive_world_phile:0 "$opinion_cracked_a_primitive_world_phile$"
  NUM_HYPERLANES_TOOLTIP:0 "§HHyperlane Density§!\nMultiplies the standard number of hyperlanes that will be generated in the galaxy."
  NUM_HYPERLANES:0 "ความหนาแน่นของไฮเปอร์เลน"
