--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -72,7 +72,7 @@
  IS_NOT_FACTION_TYPE_TRIGGER:0 "Is NOT faction type $TYPE$"
  NOT_XENO_COMPATIBILITY_ENABLED_TRIGGER:0 "ปิดความเข้ากันได้ของชาวต่างดาว"
  XENO_COMPATIBILITY_ENABLED_TRIGGER:0 "เปิดความเข้ากันได้ของชาวต่างดาว"
- ADD_DEPOSIT_EFFECT_FULL:0 "เพิ่ม $DEPOSIT|Y$ ไปที่ $PLANET|Y$ โดยมีผลดังนี้:\n$EFFECT$\n"
+ ADD_DEPOSIT_EFFECT_FULL:1 "Add $DEPOSIT|Y$ to $PLANET|Y$\n$EFFECT$\n"
  HAS_SPECIAL_PROJECT:0 "มีโครงการพิเศษ $SPECIAL_PROJECT$"
  HAS_NOT_SPECIAL_PROJECT:0 "ไม่มีโครงการพิเศษ $SPECIAL_PROJECT$"
  HAS_COMPLETED_SPECIAL_PROJECT:0 "เสร็จสิ้นโครงการพิเศษ $SPECIAL_PROJECT$"
@@ -352,8 +352,6 @@
  resolution_galactic_market_relocate_desc:0 "We question whether the Galactic Market is best served by its current leader. We should initiate a new competition to determine who should lead it."
  resolution_galactic_market_relocate_effect_success:0 "Begins the Galactic Market leadership competition again."
  resolution_galactic_market_relocate_trigger_fail:0 "The Galactic Market has been relocated too recently."
- galcom.64.name:0 "$galcom.63.name$"
- galcom.64.desc:0 "The Galactic Community has spoken, and a new competition has begun to relocate the Galactic Market. The market's headquarters in the [market_founder_planet.solar_system.GetName] system has been dismantled, the last traders reluctantly abandoning their posts today, bemoaning the massive disruption to galactic trade that this dramatic and in their view needless step has caused. Nominations for the headquarters' new location have already opened, the Community's Board of Commerce issuing a statement regretting this state of affairs and promising that a new host will be found swiftly."
  resolution_category_divinity:0 "ความศักดิ์สิทธิ์แห่งชีวิต"
  resolution_divinity_comfort_the_fallen:0 "ปลอบโยนผู้ที่ล้มลง"
  resolution_divinity_comfort_the_fallen_desc:0 "แม้จะมีผู้ที่ด้อยกว่าพวกเราแต่เขายังคงเป็นหนึ่งของพวกเราและเราควรมาช่วยกันช่วยเหลือพวกเขาในยามจำเป็น"
@@ -475,7 +473,7 @@
  harvested_calves:2 "§Y[Root.tiyanki_calf_kills]§! §HTiyanki Calves:§!\n"
  harvested_hatchlings:2 "§Y[Root.tiyanki_hatchling_kills]§! §HTiyanki Hatchlings:§!\n"
  harvested_oxes:0 "§Y[Root.tiyanki_ox_kills]§! §HTiyanki Oxen:§!\n"
- galcom.110.desc:0 "Officials from the Galactic Community have received word of our recent victory against the Tiyanki Matriarch. They have informed us that our destruction of the beast was a clear violation of the Tiyanki Conservation Act, regardless of the Matriarch's hostile nature.\n\nThe [Root.GetName] will be considered in §RBreach of Galactic Law§! for the next ten years. Additionally, they have fined us §Y5000§! energy credits for our killing of "a unique Tiyanki life form whose like the galaxy shall never see again.""
+ galcom.110.desc:1 "Officials from the Galactic Community have received word of our recent victory against the Tiyanki Matriarch. They have informed us that our destruction of the beast was a clear violation of the Tiyanki Conservation Act, regardless of the Matriarch's hostile nature.\n\nThe [Root.GetName] will be considered in §RBreach of Galactic Law§! for the next ten years. Additionally, we have been issued with a hefty fine for our killing of "a unique Tiyanki life form whose like the galaxy shall never see again.""
  galcom.110.a:0 "It had to be put down."
  galcom.110.b:0 "But... but it attacked us!"
  galcom.110.c:0 "That beast had to die."
@@ -935,7 +933,7 @@
  federations3.2255.desc:0 "When we decided to hold the council, we knew the road to a unified dogma would be long and hard, but we underestimated just how long and how hard it would be. Months of sterile debates have done nothing but highlight everything that separates us from each other. We have decided to wait a while before trying again."
  federations3.2260.name:0 "Ecumenical Council: Concord Prevails"
  federations3.2260.desc:0 "Truly, we are blessed. Whatever apprehensions we had going in have been proven wrong and everything went quite smoothly. Precise theology and inspired discourse have allowed us to create a harmonious corpus of our new dogma. We will surely revisit it later, but for now, it will serve as the foundation of a unified faith that will bring us closer to each other!"
- federations3.2260.tt:0 "For 20 years, §G+20%§! £unity£ Unity from jobs and §G+3§! Monthly Federation XP"
+ federations3.2260.tt:1 "For 20 years, §G+20%§! £unity£ Unity from jobs and §G+3§! Monthly Federation XP"
  federations3.2265.name:0 "Ecumenical Council: Tentative Success"
  federations3.2265.desc:0 "Overall, the council was productive. Not everything went smoothly, but difficulties were to be expected. This is only the first step towards unifiying our people and our faiths. The road will be long, but what expects us at the end will make it worthwhile."
  federations3.2265.tt:0 "For 10 years, §G+10%§! £Unity£ Unity from jobs and §G+3§! Monthly Federation XP"
