--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -115,7 +115,9 @@
  MOD_FIRST_CONTACT_SPEED_MULT:0 "First Contact Discovery Speed"
  MOD_FIRST_CONTACT_CLUES_ADD:0 "First Contact Skill"
  MOD_FIRST_CONTACT_DEFENSE_ADD:0 "ความยากในการติดต่อครั้งแรกของเป้าหมาย"
+ MOD_INTEL_GAIN_SPEED:0 "Speed of Intel Gain on Other Empires"
  MOD_COUNTER_INTEL_GAIN_SPEED:1 "Speed of Other Empires' Intel Gain on You"
+ MOD_INTEL_RECONNAISSANCE_LEVEL_ADD:0 "Intel level from Active Reconnaissance"
  MOD_COUNTRY_SCAVENGE_DEBRIS_MULT:0 "Resources Gained from Scavenging Debris"
  MOD_ADD_BASE_COUNTRY_INTEL:0 "เลเวลพื้นฐานของข่าวกรอง"
  MOD_POP_FERTILITY:0 "การเจริญพันธุ์"
@@ -303,6 +305,8 @@
  MOD_SHIP_NAVAL_CAP_USAGE_MULT:0 "$MOD_SHIP_NAVAL_CAP_USAGE_ADD$"
  MOD_SHIP_REPAIR_HULL_MULT:0 "ความเร็วในการซ่อมตัวยานที่จอดเทียบท่า"
  MOD_SHIP_REPAIR_ARMOR_MULT:0 "ความเร็วในการซ่อมเกราะของยานที่จอดเทียบท่า"
+ MOD_SHIP_CLOAKING_STRENGTH_ADD:0 "Cloaking Strength"
+ MOD_SHIP_CLOAKING_DETECTION_ADD:0 "Detection Strength"
  MOD_OWNED_SHIP_SPEED_MULT:0 "$MOD_SHIP_SPEED_MULT$"
  MOD_OWNED_SHIP_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$"
  MOD_OWNED_SHIP_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$"
@@ -701,6 +705,8 @@
  mod_weapon_swarm_weapon_fire_rate_mult:0 "Prethoryn Swarm Weapon Attack Speed"
  mod_weapon_type_space_fauna_weapon_damage_mult:0 "Space Fauna Weapon Damage"
  mod_weapon_type_space_fauna_weapon_fire_rate_mult:0 "Space Fauna Weapon Attack Speed"
+ mod_weapon_archaeotech_weapon_damage_mult:0 "Archaeotech Weapon Damage"
+ mod_weapon_archaeotech_weapon_fire_rate_mult:0 "Archaeotech Weapon Attack Speed"
  mod_shroud_delve_cooldown:0 "คูลดาวน์การล้วงหาข้อมูลสิ่งที่แอบซ่อน"
  vultaum_asteroid_category_research_speed_mult:0 "ความเร็วในการวิจัยสิ่งผิดปกติ (จักรวรรดิแรกเริ่ม)"
  vultaum_asteroid_category_research_fail_risk_mult:0 "ความเสี่ยงที่ความผิดปกติจะล้มเหลว (จักรวรรดิแรกเริ่ม)"
@@ -795,6 +801,12 @@
  ruler_station:0 "ปรับปรุงสถานีที่สร้างขึ้นสำหรับผู้ปกครอง"
  assist_research:0 "ความช่วยเหลือด้านการวิจัย"
  assist_research_desc:1 "Planetside research facilities are assisted by a Science Ship in orbit."
+ assist_cloaking_detection:0 "Cloaking Detection Assistance"
+ assist_cloaking_detection_desc:0 "Starbase Cloaking Detection arrays are assisted by a Science Ship in orbit."
+ active_reconnaissance_speed:0 "Active Reconnaissance"
+ active_reconnaissance_speed_desc:0 "Gaining intel faster due to having a cloaked Science Ship performing Active Reconnaissance."
+ active_reconnaissance_level:0 "Active Reconnaissance"
+ active_reconnaissance_level_desc:0 "Getting intel level due to having a cloaked Science Ship performing Active Reconnaissance."
  previous_deal_broken:0 "ข้อตกลงการค้าที่ถูกทำลาย"
  previous_deal_ended:0 "ข้อตกลงทางการค้าที่บรรลุ(สำเร็จ)"
  extradimensionals_defeated:0 "Extradimensionals Defeated"
@@ -833,6 +845,7 @@
  ship_max_damaged_effect:0 "โทษที่ได้รับจากความเสียหาย"
  station_self_repair:0 "ซ่อมแซมตัวเอง"
  jump_drive_cooldown:1 "เวลาคูลดาวน์การขับเคลื่อนแบบกระโดดข้าม (จั้มไดร์ฟ)"
+ cloaking_cooldown:0 "Cloaking Cooldown"
  pop_base:0 "ฐาน"
  pop_base_with_happiness:0 "$pop_base$"
  hostile_environment:0 "สภาพแวดล้อมที่ไม่เป็นมิตร"
@@ -1077,7 +1090,7 @@
  opinion_we_liberated:1 "Liberated"
  opinion_broke_away:0 "Breakaway State"
  opinion_broke_away_from:0 "Former Oppressors"
- opinion_primitive_violation:0 "Annexed Primitives"
+ opinion_primitive_violation:1 "Annexed pre-FTLs"
  opinion_fallen_empire_gift:0 "Given Gift"
  opinion_put_in_their_place:0 "Put in their place"
  opinion_accepted_fallen_empire_demand:0 "ยอมรับความต้องการ"
@@ -1095,6 +1108,8 @@
  opinion_shade_giver:0 "Shade-Giver"
  opinion_ceded_starbase:0 "Borders Respected"
  opinion_not_ceded_starbase:0 "Borders Disrespected"
+ opinion_respect_independence:0 "Independence Respected"
+ opinion_disrespect_independence:0 "Independence Disrespected"
  triggered_opinion_tr_versatility_universal_compatibility:0 "$tr_versatility_universal_compatibility$"
  triggered_opinion_tr_domination_star_lords:0 "$tr_domination_star_lords$"
  triggered_opinion_ap_defender_of_the_galaxy:0 "$ap_defender_of_the_galaxy$"
@@ -1317,8 +1332,8 @@
  spaceport_level_4:0 ""
  spaceport_level_5:0 ""
  spaceport_level_6:0 ""
- stone_age_civilization:0 "ยุคหินดึกดำบรรพ์"
- stone_age_civilization_desc:2 "This world has produced a primitive Stone Age proto-civilization."
+ stone_age_civilization:1 "Stone Age pre-FTLs"
+ stone_age_civilization_desc:3 "This world has produced a Stone Age proto-civilization."
  dead_creatures:0 "Dead Space Creatures"
  dead_creatures_desc:0 "This gas giant served as an ancient graveyard for a species of spacefaring creatures. Many corpses can still be found in orbit, offering valuable research."
  starship_graveyard:0 "Starship Graveyard"
@@ -1474,3 +1489,7 @@
  MOD_CATAPULT_RANGE_BASE:0 "เครื่องเหวี่ยงกองยานควอนตัม ระยะทำการ (พื้นฐาน)"
  MOD_CATAPULT_RANGE_MULT:0 "เครื่องเหวี่ยงกองยานควอนตัม ระยะทำการ"
  mod_quantum_catapult_megastructure_bypass_windup_mult:0 "เครื่องเหวี่ยงกองยานควอนตัม สิ้นสุด"
+ mod_country_society_research_cost_mult:0 "Society research Upkeep"
+ mod_country_consumer_goods_cost_mult:0 "Consumer goods upkeep"
+ contact_with_MSI_01:0 "TODO: add localisation"
+ contact_with_MSI_02:0 "TODO: add localisation"
