--- a/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/name_lists_l_english.yml
@@ -788,6 +788,35 @@
  SHROUDWALKER_fossil_plural:0 "fossils"
  SHROUDWALKER_remnant:0 "skeleton"
  SHROUDWALKER_remnant_plural:0 "skeletons"
+ MSI_SLAVER:0 "$NAME_MSI_species$"
+ MSI_SLAVER_desc:1 "$HUM_desc$"
+ MSI_SLAVER_plural:0 "$NAME_MSI_species_plural$"
+ MSI_SLAVER_insult_01:1 "cur"
+ MSI_SLAVER_insult_plural_01:1 "curs"
+ MSI_SLAVER_insult_02:1 "scum"
+ MSI_SLAVER_insult_plural_02:1 "scum"
+ MSI_SLAVER_compliment_01:1 "peer"
+ MSI_SLAVER_compliment_plural_01:1 "peers"
+ MSI_SLAVER_compliment_02:1 "associate"
+ MSI_SLAVER_compliment_plural_02:1 "associates"
+ MSI_SLAVER_spawn:0 "$HUM_spawn$"
+ MSI_SLAVER_spawn_plural:0 "$HUM_spawn_plural$"
+ MSI_SLAVER_sound_01:0 "$HUM_sound_01$"
+ MSI_SLAVER_sound_02:0 "$HUM_sound_02$"
+ MSI_SLAVER_organ:0 "$HUM_organ$"
+ MSI_SLAVER_organ_plural:0 "$HUM_organ_plural$"
+ MSI_SLAVER_mouth:0 "$HUM_mouth$"
+ MSI_SLAVER_ear:0 "$HUM_ear$"
+ MSI_SLAVER_ear_plural:0 "$HUM_ear_plural$"
+ MSI_SLAVER_hand:0 "$HUM_hand$"
+ MSI_SLAVER_hand_plural:0 "$HUM_hand_plural$"
+ MSI_SLAVER_tooth:0 "$HUM_tooth$"
+ MSI_SLAVER_tooth_plural:0 "$HUM_tooth_plural$"
+ MSI_SLAVER_fossil:0 "$HUM_fossil$"
+ MSI_SLAVER_fossil_plural:0 "$HUM_fossil_plural$"
+ MSI_SLAVER_remnant:0 "$HUM_remnant$"
+ MSI_SLAVER_remnant_plural:0 "$HUM_remnant_plural$"
+ SOLARPUNK:0 "Sustainable"
  Human:0 "มนุษย์"
  Human_adj:0 "มนุษย์"
  Human_plural:0 "มนุษย์"
