--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -256,7 +256,7 @@
  necroids.310.a:0 "They need to be exterminated."
  sm_cordyceptic_reanimation_facility:0 "Cordyceptic Reanimation Facility"
  sm_cordyceptic_reanimation_facility_desc:0 "§LNormally we have to find recently-dead subjects for our reanimation practices, but with a spawning system we can infiltrate them at an earlier stage and have a steady supply of hosts.§!\n"
- requires_tiyanki_spawning_system:0 "§RNeeds to be built in §YTiyana Vek§!, §YTiyun Ort§! or §YAmor Alveo§!.§!"
+ requires_tiyanki_spawning_system:0 "§RNeeds to be built in §YTiyana Vek§!, §YTiyun Ort§!, or §YAmor Alveo§!.§!"
  sm_cordyceptic_reanimation_facility_desc_modifier:0 "Will produce a §YReanimated Fleet§! every §G5 years§! when built in systems swarming with biological life."
  vo_necroid_voice:0 "Necroid"
  effect_random_owned_species:0 "Random Owned Species"
@@ -315,7 +315,7 @@
  NAME_Reanimated_Grand_Dragon:0 "Reanimated $NAME_Grand_Dragon$"
  NAME_Reanimated_Shard_Dragon:0 "Reanimated $NAME_Shard_Dragon$"
  NAME_Reanimated_Sky_Dragon:0 "Reanimated $NAME_Sky_Dragon$"
- NAME_Reanimated_Voidspawn:0 "Reanimated $NAME_Voidspawn$"
+ NAME_Reanimated_Voidspawn:1 "Reanimated $NAME_Voidspawn$"
  NAME_Reanimated_Progenitor:0 "Reanimated $NAME_Progenitor$"
  NAME_Reanimated_Tiyanki_Cow:0 "Reanimated Tiyanki Cow"
  NAME_Reanimated_Tiyanki_Bull:0 "Reanimated Tiyanki Bull"
