--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -4,16 +4,16 @@
  SPYNETWORK_ASSETS:0 "จารชน"
  OPERATIONS:0 "ปฏิบัติการ"
  build_spy_network_TITLE:0 "สร้างเครือข่ายสอดแนม"
- build_spy_network_DESC:1 "ส่งทูตที่จะทำงานสร้าง$spy_network$ภายในจักรวรรดิของพวกเขา"
+ build_spy_network_DESC:2 "Send an envoy who will work on building a $spy_network$ within their civilization."
  spy_network:1 "เครือข่ายสอดแนม"
  spy_network_plural:0 "เครือข่ายสอดแนม"
- spy_network_desc:2 "ส่งทูตไปสร้าง $spy_network$ และเพิ่ม §Hระดับการแทรกซึม§! ของคุณ\n\nเราไม่สามารถกำหนดใหม่ได้เป็นเวลา §Y£time£360§!"
+ spy_network_desc:3 "Sending an envoy to actively build a $spy_network$ will increase our §HInfiltration Level§!, providing Intel and allowing us to conduct Espionage Operations.\n\nWe will be unable to reassign them for §Y£time£360§!."
  ENVOY_spy_network:1 "ยุ่งกับการสร้าง §H$spy_network$§! ใน $LOCATION|H$"
  ESPIONAGE_OPERATION_NOT_OWNER:1 "ไม่ได้เป็นเจ้าของ $spy_network$"
  ACTIVE_FILTER:0 "ยังทำงานอยู่"
  BONUSES:0 "โบนัสต่างๆ"
  ASSET:0 "จารชน"
- ASSIGN_ASSET:0 "กำหนดจารชนให้กับปฏิบัติการ"
+ ASSIGN_ASSET:1 "Assign Asset to the Operation"
  PHASE_REPORT:0 "รายงานในแต่ละขั้นตอน"
  TARGET_INFO:0 "ข้อมูลของเป้าหมาย"
  SELECT_TARGET:0 "เลือกเป้าหมาย"
@@ -98,6 +98,8 @@
  op_cat_sabotage_desc:0 "Aggressive operations which strike directly at military, commercial and civilian targets."
  op_cat_subterfuge:0 "อุบาย"
  op_cat_subterfuge_desc:0 "Clandestine acts of opinion-swaying, theft and coercion."
+ op_cat_infiltration:0 "Infiltration"
+ op_cat_infiltration_desc:0 "Undercover operations to subtly influence a society from within."
  op_cat_government:0 "รัฐบาล"
  op_cat_diplomacy:0 "การทูต"
  op_cat_economy:0 "เศรษฐกิจ"
@@ -156,11 +158,11 @@
  operation_spark_rebellion_on_success:0 "$IF_SUCCESSFUL|E$\nForm a Rebellion and declare war against the Galactic Imperium."
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD:0 "ความยากของปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD$"
- MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:0 "ความยากของปฏิบัติการของศัตรู"
+ MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:1 "Defense Against Hostile Operations"
  MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD$"
  MOD_ESPIONAGE_OPERATION_COST_ADD:0 "ค่าปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_OPERATION_COST_ADD$"
- MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:1 "จำเป็นต้องมีการแทรกซึมในปฏิบัติการของศัตรู"
+ MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:2 "Infiltration Required for Hostile Operations"
  MOD_ESPIONAGE_HOSTILE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD$"
  MOD_ESPIONAGE_OPERATION_SKILL_ADD:0 "สกิลปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_SKILL_MULT:0 "$MOD_ESPIONAGE_OPERATION_SKILL_ADD$"
@@ -194,25 +196,28 @@
  mod_op_cat_sabotage_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_sabotage$)"
  mod_op_cat_manipulation_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_manipulation$)"
  mod_op_cat_provocation_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_provocation$)"
+ mod_op_cat_infiltration_difficulty_add:0 "Operation Difficulty ($op_cat_infiltration$)"
  mod_op_cat_government_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_government$)"
  mod_op_cat_diplomacy_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_diplomacy$)"
  mod_op_cat_economy_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_economy$)"
  mod_op_cat_technology_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_technology$)"
  mod_op_cat_military_difficulty_add:1 "ความยากของปฏิบัติการ ($op_cat_military$)"
- mod_hostile_op_cat_subterfuge_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_subterfuge$)"
- mod_hostile_op_cat_sabotage_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_sabotage$)"
- mod_hostile_op_cat_manipulation_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_manipulation$)"
- mod_hostile_op_cat_provocation_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_provocation$)"
- mod_hostile_op_cat_government_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_government$)"
- mod_hostile_op_cat_diplomacy_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_diplomacy$)"
- mod_hostile_op_cat_economy_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_economy$)"
- mod_hostile_op_cat_technology_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_technology$)"
- mod_hostile_op_cat_military_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($op_cat_military$)"
- mod_hostile_operation_sabotage_starbase_difficulty_add:0 "ความยากของปฏิบัติการของศัตรู ($operation_sabotage_starbase$)"
+ mod_hostile_op_cat_infiltration_difficulty_add:0 "Hostile Operation Difficulty ($op_cat_infiltration$)"
+ mod_hostile_op_cat_subterfuge_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_subterfuge$)"
+ mod_hostile_op_cat_sabotage_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_sabotage$)"
+ mod_hostile_op_cat_manipulation_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_manipulation$)"
+ mod_hostile_op_cat_provocation_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_provocation$)"
+ mod_hostile_op_cat_government_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_government$)"
+ mod_hostile_op_cat_diplomacy_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_diplomacy$)"
+ mod_hostile_op_cat_economy_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_economy$)"
+ mod_hostile_op_cat_technology_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_technology$)"
+ mod_hostile_op_cat_military_difficulty_add:1 "Defense Against Hostile Operations ($op_cat_military$)"
+ mod_hostile_operation_sabotage_starbase_difficulty_add:1 "Defense Against Hostile Operations ($operation_sabotage_starbase$)"
  mod_op_cat_subterfuge_skill_add:1 "สกิลปฏิบัติการ ($op_cat_subterfuge$)"
  mod_op_cat_sabotage_skill_add:1 "สกิลปฏิบัติการ ($op_cat_sabotage$)"
  mod_op_cat_manipulation_skill_add:1 "สกิลปฏิบัติการ ($op_cat_manipulation$)"
  mod_op_cat_provocation_skill_add:1 "สกิลปฏิบัติการ ($op_cat_provocation$)"
+ mod_op_cat_infiltration_skill_add:0 "Operation Skill ($op_cat_infiltration$)"
  mod_op_cat_government_skill_add:1 "สกิลปฏิบัติการ ($op_cat_government$)"
  mod_op_cat_diplomacy_skill_add:1 "สกิลปฏิบัติการ ($op_cat_diplomacy$)"
  mod_op_cat_economy_skill_add:1 "สกิลปฏิบัติการ ($op_cat_economy$)"
