--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -39,7 +39,7 @@
  TRIGGER_INTEL_STALE_NOT:0 "$INTEL|Y$ is not stale for $COUNTRY$"
  INTEL_DETAILS:1 "ข้อมูลข่าวกรองปัจจุบัน: $CURRENT_INTEL|Y$ / $TARGET_INTEL|Y$"
  INTEL_TARGET_BREAKDOWN:1 "ข้อมูลข่าวกรองของคุณต่อจักรวรรดิ $TARGET_EMPIRE|Y$ จะมีแนวโน้มไปสู่จุดสูงสุด:"
- INTEL_TARGET_BREAKDOWN_CONTENT:2 "ข้อมูลข่าวกรองพื้นฐาน: $FROM_MODIFIER|Y$\nสนธิสัญญาทางการทูต: $FROM_DIPLO_PACTS|Y$\nจากการไว้เนื้อเชื่อใจ: $FROM_TRUST|Y$\nจากการแทรกซึม: $FROM_SPY_NETWORK|Y$"
+ INTEL_TARGET_BREAKDOWN_CONTENT:3 "Base Intel: $FROM_MODIFIER|Y$\nDiplomatic Pacts: $FROM_DIPLO_PACTS|Y$\nFrom Trust: $FROM_TRUST|Y$\nFrom Infiltration: $FROM_SPY_NETWORK|Y$\nFrom Active Reconnaissance: $FROM_ACTIVE_RECONNAISSANCE|Y$"
  INTEL_CATEGORY_LEVEL:0 "$CATEGORY$: $LEVEL$"
  INTEL_LEVEL_0:0 "§Rไม่มี§!"
  INTEL_LEVEL_1:0 "§Rต่ำ§!"
@@ -91,6 +91,7 @@
  INTEL_INFO_intel_military_fleets:0 "ที่ตั้งกองยานรบ"
  INTEL_INFO_intel_military_fleet_details:1 "รายละเอียดของยาน"
  INTEL_INFO_intel_military_fleet_orders:0 "คำสั่งปัจจุบันของกองยานรบ"
+ INTEL_INFO_intel_military_cloaked_fleets:0 "Cloaked Fleets"
  INTEL_INFO_intel_military_generals:0 "พลเอกที่ทำงาน"
  INTEL_INFO_intel_military_starbases:0 "ที่ตั้งของฐานอวกาศ"
  INTEL_INFO_galactic_community_vote_breakdown:0 "เหตุผลของการโหวตในประชาคมกาแล็กติก"
@@ -157,7 +158,7 @@
  PACT_trade_federation:0 "Trade League"
  PACT_hegemony_federation:0 "Hegemony"
  FIRST_CONTACT_ROLL_CHANCE_TT:0 "There is a §Y$CHANCE|0$%§! chance that the current phase will end in §Gsuccess§!.\n\nThe phase has a $INSIGHT_CHANCE|%0Y$ chance of granting §YInsights§!, which increase the chance of future phases' success."
- FIRST_CONTACT_INSIGHTS_NEEDED_TT:0 "We need $INSIGHTS|0Y$ more §YInsights§! or envoy §YSkill Points§! before we will have a chance at succeeding this phase of the investigation."
+ FIRST_CONTACT_INSIGHTS_NEEDED_TT:1 "We need $INSIGHTS|0Y$ more §YInsights§! before we will have a chance at succeeding this phase of the investigation."
  FIRST_CONTACT_CURRENT_SCORE_AND_HEADER:0 "The current score before dice roll is $SCORE|0Y$.\n\n§ERoll Outcomes:§!"
  FIRST_CONTACT_ON_ROLL_FAILED_RANGE:0 "($CHANCE|%0Y$) Result is between $MIN|0Y$ and $MAX|0Y$. Adds $CLUES|0Y$ insight(s)."
  FIRST_CONTACT_ON_ROLL_FAILED_GREATER_THAN_EQ:1 "(§Y$CHANCE|0$%§!) Result is $MIN|0Y$ or greater. Finishes chapter."
@@ -201,11 +202,13 @@
  first_contact_skill_4:0 "First Contact Mastery"
  FIRST_CONTACT_ADD_INTEL:0 "ข้อมูลข่าวกรองของ §Y[Root.ContactCountry.GetRealName]§! กำหนดเป็น $INTEL|0G$\n"
  seek_friends_tt:1 "We shall seek friendly relations with the §Y[contact_empire.GetName]§!."
- seek_enemies_tt:1 "เราจะเตรียมรับมือกับ §Y[contact_empire.GetName]§! ซึ่งจะทำให้เครือข่ายสายลับของพวกเรา §G+33%§! ในเขตแดนของเขา"
+ seek_enemies_tt:2 "We shall prepare for hostilities with the §Y[contact_empire.GetName]§!, giving us §G+33%§! Spy Network growth on them."
  seek_enemies_tt_short:0 "We shall prepare for hostilities with the §Y[contact_empire.GetName]§!."
- seek_isolation_tt:1 "เราจะพยายามทำตัวให้ห่างจาก §Y[contact_empire.GetName]§! ซึ่งจะทำให้เครือข่ายสายลับของพวกเขา §R-33%§! ในเขตแดนของเรา"
+ seek_isolation_tt:2 "We shall seek to distance ourselves from the §Y[contact_empire.GetName]§!, giving them §R-33%§! Spy Network growth on us."
  seek_isolation_tt_short:0 "We shall seek to distance ourselves from the §Y[contact_empire.GetName]§!."
- friendship_already_precluded:2 "As we have already acted with hostility towards the §Y[contact_empire.GetName]§!, we can dispense with the pleasantries."
+ friendship_already_precluded:3 "[contact_empire.GetPrecludedFriendshipCause]"
+ friendship_already_precluded_hostile:0 "As we have already acted with hostility towards the §Y[contact_empire.GetName]§!, we can dispense with the pleasantries."
+ friendship_already_precluded_slave_origins:0 "No friendship with former masters."
  action.1.fe_option:0 "The §Y[contact_empire.GetName]§! care little for our diplomatic maneuvering."
  hostile_first_contact_tt:0 "This will be interpreted as a §Rhostile§! action"
  action.1.desc_hacking_01:0 "You hacked into us, and now you call us friend? Bah! The [contact_empire.GetName] will remain vigilant towards your kind."
@@ -237,7 +240,7 @@
  action.1.desc_hostile_to_homicidal_03:0 "Why do you attack us, designation "[Root.GetName]"? You are not on the target list."
  action.1.desc_hostile_to_homicidal_04:0 "You are right to attack us, [Root.GetSpeciesNamePlural], but that will not save you: you are still our prey."
  action.1.desc_hostile_to_homicidal_05:0 "Your hostility is unfortunate. We had considered sparing you, being fellow [Root.GetSpeciesNamePlural] as you are, but it seems you will need to be... re-educated, at the very least."
- first_contact_start_title:0 "[This.GetFirstContactStart]"
+ first_contact_start_title:1 "$first_contact.1.name$"
  first_contact.1.name:0 "การเผชิญหน้ากันที่ [This.System.GetName]"
  first_contact.1.desc.base:1 "เราได้ติดต่อกับเอเลี่ยนลึกลับในระบบดาว §H[This.System.GetName]§! เป็นครั้งแรก สำหรับตอนนี้เราจะตั้งชื่อพวกเขาว่า §H[This.ContactCountry.GetName]§! จนกว่าเราจะสามารถหาข้อมูลเพิ่มเติมเกี่ยวกับพวกเขาได้"
  first_contact.1.desc.default:0 "$first_contact.1.desc.base$ หากพวกเขามีภาษา เราต้องถอดรหัสเพื่อสร้างการติดต่อสื่อสาร"
@@ -273,7 +276,7 @@
  first_contact.50.B.machine:0 "Evaluation protocols evaluate intolerable risk."
  first_contact.50.C:0 "The dangers of ignorance are greater."
  first_contact.50.C1:0 "We must find out their secrets."
- first_contact.50.C.machine:0 "Initiating Subversion Protocols"
+ first_contact.50.C.machine:0 "Initiating Subversion Protocols."
  first_contact.50.C.tooltip:0 "§RWe will attempt to hack into their databanks to find out more about them. If they detect our attempts, they will likely be angered by this course of action.§!"
  first_contact.60.name:0 "การสื่อสารที่ได้รับ"
  first_contact.60.desc.default:1 "The §H[This.ContactCountry.GetName]§! appear eager to establish communications with us, having sent a large audio and visual §Htransmission§! that appears to offer the key to translating their language."
@@ -844,6 +847,7 @@
  fcsum_drones_2:0 "We identified the §H[This.ContactCountry.GetName]§! as dedicated mining drones whose owner has long since passed on."
  fcsum_marauders_1:0 "The §H[This.ContactCountry.GetName]§! appear to be part of a fully sapient but highly aggressive civilization."
  fcsum_pirates_1:0 "$fcsum_marauders_1$"
+ fcsum_neutrals_1:0 "What we consider to be the §H[This.ContactCountry.GetName]§! exist outside the boundaries of typical space-faring civilizations."
  fcsum_caravaneers_1:0 "§H[This.ContactCountry.GetName]§! were detected in a sort of caravan leading across the galaxy."
  fcsum_void_clouds_1:0 "$fcsum_critters_1$"
  fcsum_void_clouds_2:0 "The §H[This.ContactCountry.GetName]§! were identified as hostile, probably self-aware clouds of space debris."
@@ -852,9 +856,13 @@
  fcsum_colorful_linguistics_2:0 "We have a diplomatic decision to make."
  first_contact.1060.name:0 "ภาษาที่ใช้ในการติดต่อครั้งแรก"
  first_contact.1060.desc.base:0 "การเผชิญหน้ากับสิ่งมีชีวิตต่างดาวครั้งล่าสุดของเราได้เกิดขึ้นอีกครั้ง - การถกเถียงกันในสมัยก่อนว่าเราควรจะติดต่อกับอารยธรรมต่างดาวที่ชาญฉลาดได้หรือไม่อย่างไร"
+ first_contact.1060.desc.payback.base:0 "Our first encounter with alien lifeforms left us wary of others. There's life out there, and while exploring the galaxy, we will doubtlessly meet intelligent life again. But the manner of our greeting is still up for debate."
  first_contact.1060.desc:0 "$first_contact.1060.desc.base$\n\nในขณะที่มีผู้สนับสนุนบางส่วนมุ่งเน้นไปที่การสร้างความสัมพันธ์กับพวกเขาโดยเร็วที่สุดโดยด้วยข้อความสันติภาพ แต่คนอื่นๆเตือนให้ระมัดระวัง โดยชี้ว่า เราไม่สามารถรู้ได้ว่ามนุษย์ต่างดาวมีเจตนาร้ายต่อเราหรือไม่และเป็นการไม่ฉลาดที่จะบอกให้พวกเขาทราบ การมีอยู่ของเราโดยไม่จำเป็น\n\nส่วนกลุ่มที่หัวรุนแรงต้องการให้จัดการกับพวกเขาเสีย ก่อนที่จะเป็นภัยต่อเรา: "[This.GetSpeciesNamePlural]ตกอยู่ในความเสี่ยง" พวกเขากล่าวว่า "เราไม่ลังเลที่จะดำเนินมาตรการใดๆที่จำเป็นเพื่อกำจัดภัยคุกคามจากพวกต่างดาว""
+ first_contact.1060.desc.payback:0 "$first_contact.1060.desc.payback.base$\n\nWhile some advocate establishing friendly relations as quickly as possible, others advise caution, pointing out that our friendly nature is exactly what led us to imprisonment and betrayal.\n\nA third, more radical group, push for pre-emptive action: "the best way to avoid a second invasion is to hit them first," they say. "No more will we bow to the will of xenos!""
  first_contact.1060.desc.xenophile:0 "$first_contact.1060.desc.base$\n\nในขณะที่มีผู้สนับสนุนบางส่วนมุ่งเน้นไปที่การสร้างความสัมพันธ์กับพวกเขาโดยเร็วที่สุดโดยด้วยข้อความสันติภาพ แต่คนอื่นๆเตือนให้ระมัดระวัง โดยชี้ว่า เราไม่สามารถรู้ได้ว่ามนุษย์ต่างดาวมีเจตนาร้ายต่อเราหรือไม่และเป็นการไม่ฉลาดที่จะบอกให้พวกเขาทราบ การมีอยู่ของเราโดยไม่จำเป็น"
+ first_contact.1060.desc.payback.xenophile:0 "$first_contact.1060.desc.base.payback$\n\nWhile most of us want to believe there are kind civilizations out there, others advise caution, pointing out our friendly nature is exactly what led us to imprisonment and betrayal."
  first_contact.1060.desc.xenophobe:0 "$first_contact.1060.desc.base$\n\nในขณะที่ผู้สนับสนุนบางส่วนพูดถึงเรื่องการจัดการกับพวกเขาเสียก่อนที่จะเป็นภัยต่อเรา แต่คนอื่นๆ แนะนำให้ระมัดระวัง โดยชี้ให้เห็นว่าควรเรียนรู้เพิ่มเติมเกี่ยวกับความสามารถของมนุษย์ต่างดาว ก่อนที่เราจะเสี่ยงที่จะเป็นศัตรูกันในอนาคต"
+ first_contact.1060.desc.payback.xenophobe:0 "$first_contact.1060.desc.payback.base$\n\nThe response is unanimous: the best way to avoid a second invasion is to assert dominance over others before they can harm us. No more will we bow to the will of xenos!"
  first_contact.1060.desc.gestalt:0 "การเผชิญหน้ากับสิ่งมีชีวิตต่างดาวเมื่อเร็วๆนี้ทำให้เราจำเป็นต้องตัดสินใจว่าเราควรปฏิบัติอย่างไรต่ออารยธรรมต่างดาวที่ชาญฉลาดที่เราอาจพบเจอ\n\nความเป็นไปได้อย่างหนึ่งคือเราต้องพยายามติดต่ออย่างสันติกับพวกเขาโดยเร็วที่สุดโดยการส่งข้อมูลที่จำเป็นเพื่อให้พวกเขาแปลการสื่อสารของเราได้ อย่างไรก็ตามสิ่งนี้อาจเป็นความผิดพลาดหากพวกเขามีเจตนาเป็นศัตรูกับเรา\n\nทางเลือกที่ปลอดภัยที่สุดคือดำเนินการด้วยความระมัดระวังและพยายามสื่อสารกับพวกเขาโดยไม่ให้ข้อมูลเกี่ยวกับเรามากเกินไป ในทางกลับกัน เราสามารถเคลื่อนไหวเชิงรุกมากขึ้นเพื่อค้นหาข้อมูลเพิ่มเติมเกี่ยวกับพวกเขาและขับไล่พวกเขาออกจากดินแดนของเรา อย่างไรก็ตามสิ่งนี้แน่นอนว่าจะทำให้พวกเขาเป็นปรปักษ์กับเรา"
  first_contact.1060.A:0 "เราจะทักทายต่างดาวโดยการอ้าแขนรับ"
  first_contact.1060.A.machine:0 "เราจะทักทายต่างดาวโดยการอ้าแขนรับ"
@@ -946,8 +954,6 @@
  PlanetBio9Moon:0 "[This.GetAAnPlanetClass] [This.GetClassAdj] moon of the system's ninth planet,"
  PlanetBio10:0 "the system's tenth planet, [This.GetAAnPlanetClass] [This.GetClassAdj] planet"
  PlanetBio10Moon:0 "[This.GetAAnPlanetClass] [This.GetClassAdj] moon of the system's tenth planet,"
- string_a:0 "a"
- string_an:0 "an"
  first_contact_critters.1.name:0 "Structured Signals"
  first_contact_critters.1.desc:1 "We have picked up readings of unknown nature. The signals seem to follow some kind of repeating syntax which could indicate sapient origin. It should be investigated further. They seem to be concentrated around a single space station, though it is unclear whether this forms part of a larger spacefaring civilization."
  first_contact_critters.1.A:0 "ดำเนินการต่อ"
@@ -1001,6 +1007,10 @@
  first_contact_critters.90.desc:0 "The vessels detected in the [This.System.GetName] system seem to be part of some sort of expedition across the galaxy, with purposes unknown. They have not made any hostile moves, nor is there any heavy weaponry in evidence. However, they have been fairly closed-mouthed, and we have been unable to pick up many signals from them. Our [This.Owner.GetLinguists] are confident that they will be able to translate their language eventually from the scraps we pick up. However, this may take quite some time."
  first_contact_critters.95.name:0 "The Nomads"
  first_contact_critters.95.desc:0 "We have managed to decipher the language of the mysterious §H[This.ContactCountry.GetName]§!. Our [This.Owner.GetLinguists] remained stumped for quite some time, and a breakthrough was only made once they began broadcasting what turns out to be a welcome message identifying them as the §H"Namarians"§! in our general direction. It appears that they are now eager to talk to us."
+ first_contact_critters.100.desc:0 "The fleet we encountered in the [This.System.GetName] system is unlike any we've seen in this region of space before. It does not appear to be aggressive, but we can only speculate as to its origin or purpose here. Our best guess is that the fleet represents a faction without formal ties to any local authority or civilization."
+ first_contact_critters.100.a:0 "Proceed with caution."
+ first_contact_critters.105.name:0 "Neutral Fleet"
+ first_contact_critters.105.desc:0 "We have reached an impasse with the fleet identifying itself as the §H[This.ContactCountry.GetRealName]§!. This unusual presence ignored most of our diplomatic overtures, but we can infer that it represents a neutral entity which stands apart from galactic civilization.\n\nWe suspect that if the fleet possess any owners in the conventional sense, it would take extraordinary measures to reach them. With this in mind, we have summarized our findings for future teams of [this.owner.GetScientistPlural] to make use of - in case such an opportunity does arise."
  further_fc_tiyanki_completed:0 "As the [This.ContactCountry.GetName] appear to belong to the same species of space whale, our first contact process with them has been declared complete too.\n"
  further_fc_amoebas_completed:0 "As the [This.ContactCountry.GetName] appear to belong to the same species of space fauna, our first contact process with them has been declared complete too.\n"
  further_fc_crystals_completed:0 "As the [This.ContactCountry.GetName] appear to be crystalline entities similar to the [Root.ContactCountry.GetName], our first contact process with them has been declared complete too.\n"
