--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -1,22 +1,22 @@
 ﻿l_english:
  pft_supremacist:2 "ฝ่ายความยิ่งใหญ่"
- pft_supremacist_desc:4 "Supremacist Factions wish for their Empire's founding species to dominate. They want policies that benefit their own species and disadvantages other species.\n\n§LXenophobe Ethos§!"
+ pft_supremacist_desc:5 "Supremacist Factions wish for their Empire's founding species to dominate. They push for policies that benefit their own species and disadvantage others.\n\n§LXenophobe & Militarist Ethos§!"
  pft_traditionalist:0 "ฝ่ายอนุรักษนิยม"
- pft_traditionalist_desc:1 "Traditionalist Factions desire a return to traditional values that may or may not have existed at some point before the Empire took to the stars. They like austerity and dislike certain technological advancements and non-spiritualist values.\n\n§LSpiritualist Ethos§!"
+ pft_traditionalist_desc:2 "Traditionalist Factions desire a return to traditional values that may or may not have existed before the Empire took to the stars. They preach for pious austerity, and scorn the kinds of societal change brought about by radical technology and non-spiritualist values.\n\n§LSpiritualist Ethos§!"
  pft_progressive:0 "ฝ่ายก้าวหน้า"
- pft_progressive_desc:1 "Progressive Factions desire non-discrimination within existing social structures and dislike non-representative forms of government.\n\n§LEgalitarian Ethos§!"
+ pft_progressive_desc:2 "Progressive Factions campaign for equity within existing social structures. They oppose non-representative forms of government, and value equal collaboration with other Empires.\n\n§LEgalitarian Ethos§!"
  pft_imperialist:0 "ฝ่ายจักรวรรดินิยม"
- pft_imperialist_desc:1 "Imperialist Factions desire dominance over other Empires. They like Rivalries and conquering other Empires, and dislike relying on others.\n\n§LMilitarist Ethos§!"
+ pft_imperialist_desc:2 "Imperialist Factions crave dominance within our own borders, and over other Empires. They thrive on Rivalries and conquering other Empires, and dislike relying on others.\n\n§LAuthoritarian & Militarist Ethos§!"
  pft_isolationist:0 "ฝ่ายลัทธิโดดเดียว"
- pft_isolationist_desc:2 "Isolationist Factions desire isolation, seeking to have as few dealings with other Empires as possible. They dislike wars of aggression as well as being seen as an easy target.\n\n§LXenophobe Ethos§!"
+ pft_isolationist_desc:3 "Isolationist Factions prefer when the wider galaxy is kept out of our internal affairs. They campaign to keep discourse with other Empires at a bare minimum, eschewing wars of aggression - but not at the cost of our becoming an easy target.\n\n§LXenophobe & Pacifist Ethos§!"
  pft_technologist:0 "ฝ่ายเทคโนโลยี"
  pft_technologist_desc:1 "Technologist Factions desire an Empire-wide embrace of scientific progress and the fruits of technological advancement. They dislike politically-motivated bans on certain avenues of research, as well as being outpaced by other Empires.\n\n§LMaterialist Ethos§!"
  pft_totalitarian:0 "ฝ่ายเผด็จการ"
- pft_totalitarian_desc:1 "Totalitarian Factions desire strictly stratified societies led by an single strongman or authoritative cabal.\n\n§LAuthoritarian Ethos§!"
+ pft_totalitarian_desc:2 "Totalitarian Factions dream of a strictly stratified society led by an single authority figure or cabal.\n\n§LAuthoritarian Ethos§!"
  pft_xenoist:0 "ฝ่ายต่างดาว"
- pft_xenoist_desc:1 "Xenoist Factions desire for greater value to be put on alien life and culture. They like diverse populations and interacting with other species. They dislike species-wide Slavery and Purges.\n\n§LXenophile Ethos§!"
+ pft_xenoist_desc:2 "Xenoist Factions champion alien life and culture. They enjoy diverse populations and interactions with other species. They oppose species-wide Slavery and Purges.\n\n§LXenophile & Egalitarian Ethos§!"
  pft_prosperity:0 "ฝ่ายรุ่งเรือง"
- pft_prosperity_desc:2 "Prosperity Factions desire economic growth and the acquisition of resources. They like energy credits and strategic resources, and they dislike armed conflicts that disrupt internal development.\n\n§LPacifist Ethos§!"
+ pft_prosperity_desc:3 "Prosperity Factions desire economic growth and the acquisition of resources. They campaign for the free flow of trade, and they dislike the kinds of armed conflicts that disrupt internal development.\n\n§LXenophile & Pacifist Ethos§!"
  pft_democratic_election_1:0 "พรรคประชาธิปไตย"
  pft_democratic_election_1_desc:0 "Democratic Party Factions emerge during Empire Elections and and dissipate shortly thereafter, serving as a means to put certain popular Leaders in the political limelight."
  pft_democratic_election_2:0 "$pft_democratic_election_1$"
@@ -29,7 +29,7 @@
  SUPREMACIST_RULER_NOT_SAME_SPECIES:0 "[Root.Owner.GetRulerTitle] is a Xeno"
  SUPREMACIST_RULER_NOT_SAME_SPECIES_DESC:0 "The [Root.GetName] want our Ruler to be of their species and will be angered by any non-[Root.Owner.GetSpeciesName] holding the position of [Root.Owner.GetRulerTitle]."
  SUPREMACIST_UNRESTRICTED_STUDY:0 "การศึกษาต่างดาวแบบล้วงล้ำ"
- SUPREMACIST_UNRESTRICTED_STUDY_DESC:0 "Exploiting primitive xeno civilizations to maximum effect by legislating for Unrestricted Native Interference will please the [Root.GetName]."
+ SUPREMACIST_UNRESTRICTED_STUDY_DESC:1 "Exploiting primitive xeno civilizations to maximum effect by legislating for Active or Aggressive Native Interference will please the [Root.GetName]."
  SUPREMACIST_NO_UNRESTRICTED_STUDY:0 "$SUPREMACIST_UNRESTRICTED_STUDY$"
  SUPREMACIST_SLAVERY_ALLOWED:0 "Slave Potential"
  SUPREMACIST_SLAVERY_ALLOWED_DESC:0 "The [Root.GetName] do not believe that some are worth more than others, simply that some are more suited to certain tasks than others. Outlawing §YSlavery§! will displease them."
@@ -82,7 +82,7 @@
  SUPREMACIST_NO_OPPRESSIVE_SUBJUGATION_POLICY:0 "$SUPREMACIST_OPPRESSIVE_SUBJUGATION_POLICY$"
  SUPREMACIST_NO_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Our subjects are here to serve us, and they should always know it. Showing leniency towards them will upset the [Root.GetName]."
  XENOIST_PASSIVE_STUDY:0 "ศึกษาต่างดาวทางอ้อม"
- XENOIST_PASSIVE_STUDY_DESC:0 "Legislating a Passive Study stance on Native Interference will please the [Root.GetName]."
+ XENOIST_PASSIVE_STUDY_DESC:1 "Legislating a policy of Subtle or Non-Interference in [root.owner.GetPreFTLLower] civilizations will please the [Root.GetName]."
  XENOIST_NO_PASSIVE_STUDY:0 "$XENOIST_PASSIVE_STUDY$"
  XENOIST_NO_SLAVES:1 "ทาสไม่จำกัดเผ่าพันธุ์"
  XENOIST_NO_SLAVES_DESC:3 "Failing to outlaw the wholesale enslavement of an entire species will greatly displease the [Root.GetName]."
@@ -106,7 +106,7 @@
  XENOIST_RECENT_UPLIFT_DESC:0 "Uplifting an alien animal species to sapience will please the [Root.GetName] for a time."
  XENOIST_NO_RECENT_UPLIFT:0 "$XENOIST_RECENT_UPLIFT$"
  XENOIST_RECENT_ENLIGHTENMENT:0 "การให้ความรู้ครั้งล่าสุด"
- XENOIST_RECENT_ENLIGHTENMENT_DESC:0 "Enlightening alien primitives to the wonders of the space age, in as non-invasive a manner as possible, will please the [Root.GetName] for a time."
+ XENOIST_RECENT_ENLIGHTENMENT_DESC:1 "Enlightening alien pre-FTLs to the wonders of the space age, in as non-invasive a manner as possible, will please the [Root.GetName] for a time."
  XENOIST_NO_RECENT_ENLIGHTENMENT:0 "$XENOIST_RECENT_ENLIGHTENMENT$"
  XENOIST_DIPLOMACY_TRADITION:1 "วัฒนธรรม[Root.GetDiplomacyTraditionName]"
  XENOIST_NO_DIPLOMACY_TRADITION:0 "$XENOIST_DIPLOMACY_TRADITION$"
@@ -116,13 +116,13 @@
  XENOIST_PRE_SAPIENT_SURVIVAL_DESC:0 "Failing to legislate for the survival of pre-sapient species will displease the [Root.GetName]."
  XENOIST_NO_PRIMITIVE_INVASION:0 "คัดค้านการฉกฉวยที่ดิน"
  XENOIST_PRIMITIVE_INVASION:0 "$XENOIST_NO_PRIMITIVE_INVASION$"
- XENOIST_NO_PRIMITIVE_INVASION_DESC:0 "Outright invading Primitive worlds will displease the [Root.GetName]."
+ XENOIST_NO_PRIMITIVE_INVASION_DESC:1 "Outright invading pre-FTL worlds will displease the [Root.GetName]."
  XENOIST_FEDERATED:0 "สหพันธ์"
  XENOIST_NOT_FEDERATED:0 "$XENOIST_FEDERATED$"
  XENOIST_FEDERATED_DESC:0 "Joining a §YFederation§! will please the [Root.GetName]."
  XENOIST_RECENT_COMMS:0 "การติดต่อใหม่ๆ"
  XENOIST_NO_RECENT_COMMS:0 "$XENOIST_RECENT_COMMS$"
- XENOIST_RECENT_COMMS_DESC:0 "Establishing communications with other empires will please the [Root.GetName] for a time."
+ XENOIST_RECENT_COMMS_DESC:1 "Establishing communications with other civilizations will please the [Root.GetName] for a time."
  XENOIST_CELEBRATE_DIVERSITY:0 "Celebrate Diversity"
  XENOIST_NO_CELEBRATE_DIVERSITY:0 "$XENOIST_CELEBRATE_DIVERSITY$"
  XENOIST_CELEBRATE_DIVERSITY_DESC:0 "Celebrating the diversity of life in the universe by showcasing Minor Artifacts will please the [Root.GetName] for a time."
@@ -141,6 +141,9 @@
  XENOIST_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
  XENOIST_ADOPT_BENEVOLENT_SUBJUGATION_POLICY:0 "$XENOIST_BENEVOLENT_SUBJUGATION_POLICY$"
  XENOIST_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "Taking care of our subjects and helping them grow will please the [Root.GetName]."
+ XENOIST_XENOLOGICAL_CONSERVATION:0 "Xeno Zoological Conservation"
+ XENOIST_NO_XENOLOGICAL_CONSERVATION:0 "$XENOIST_XENOLOGICAL_CONSERVATION$"
+ XENOIST_XENOLOGICAL_CONSERVATION_DESC:0 "Building an $building_xeno_zoo$ in the spirit of scientific study and preservation will please the [root.GetName]."
  IMPERIALIST_PHILOSOPHY:0 "การทูตเชิงรุก"
  IMPERIALIST_PHILOSOPHY_DESC:2 "Failing to allow for offensive warfare will displease the [Root.GetName]."
  IMPERIALIST_NO_PHILOSOPHY:0 "$IMPERIALIST_PHILOSOPHY$"
@@ -313,7 +316,7 @@
  TECHNOLOGIST_TECH_LEAP_DESC:0 "[Root.GetName] ไม่ยอมให้จักรวรรดิอื่นมีระดับเทคโนโลยี §Yเทียบเท่า§!"
  TECHNOLOGIST_TECH_LAG:0 "เป็นผู้นำทางเทคโนโลยี"
  TECHNOLOGIST_RESEARCH_TREATIES:0 "วิทยาศาสตร์ไร้พรมแดน"
- TECHNOLOGIST_RESEARCH_TREATIES_DESC:0 "Signing Research Treaties with at least §Y3§! other Empires or being in a Research Cooperative will please the [Root.GetName]."
+ TECHNOLOGIST_RESEARCH_TREATIES_DESC:1 "Signing Research Treaties with at least §Y3§! other Empires, being in a Research Cooperative, or providing technological enlightenment to a [root.owner.GetPreFTLLower] civilization will please the [Root.GetName]."
  TECHNOLOGIST_FEW_RESEARCH_TREATIES:0 "$TECHNOLOGIST_RESEARCH_TREATIES$"
  TECHNOLOGIST_NO_SYNTH_ENVY:0 "ต้องการการสังเคราะห์"
  TECHNOLOGIST_NO_SYNTH_ENVY_DESC:0 "Seeing other empires parade any kind of Robotic Pops around - with no domestic equivalents on any of our worlds - is sure to displease the [Root.GetName]."
@@ -631,6 +634,35 @@
  factions.2000.desc.totalitarian:0 "As a result of bringing this faction into their government, they have become more outwardly §HAuthoritarian§!.\n\n"
  factions.2000.desc.traditionalist:0 "As a result of bringing this faction into their government, they have become more outwardly §HSpiritualist§!.\n\n"
  factions.2000.desc.xenoist:0 "As a result of bringing this faction into their government, they have become more outwardly §HXenophilic§!.\n\n"
+ factions.3000.name:0 "The Political Frontier"
+ factions.3000.desc:0 "Established Factions and fledgling movements alike have taken an unusually keen interest in our new colony on §Y[root.GetName]§!. From the moment we announced settlement of this modest [root.GetPlanetHabitat], nearly every political voice in the [root.owner.GetName] has had something to say about it.\n\nOur analysts don't suspect that anything truly radical is taking root on [root.GetName], but they advise some caution. It's clear our various political entities intend to campaign vigorously on this burgeoning world."
+ factions.3000.a.demo:1 "Such vigorous debate is to be commended!"
+ factions.3000.a.auth:0 "Keep a close watch on these activists."
+ factions.3000.b:0 "The risks are too great. Bolster security."
+ factions.3000.b.auth:0 "We cannot allow this."
+ planet_political_frontier:0 "Political Frontier"
+ planet_political_frontier_desc:0 "This colony is considered fertile ground for campaigns by Factions across the political spectrum."
+ planet_political_safezone:0 "Politically Assured"
+ planet_political_safezone_desc:0 "Political Factions are being discouraged from campaign work within this colony."
+ planet_political_crackdown:0 "Political Crackdown"
+ planet_political_crackdown_desc:0 "Political Factions are actively prevented from campaigning within this colony."
+ factions.3005.name:0 "Report: Political Discourse on [root.GetName]"
+ factions.3005.desc.1:0 "As instructed, our informants on [root.GetName] have been delivering regular updates on the colony's developing political situation. In short: the trending outlook appears good.\n\nLocal enforcers and political agents have managed to keep outright dissent to a minimum, using only the bare minimum of resources. Rogue Factions in particular have struggled to gain any meaningful ground amongst the colonists; the result is a political environment which remains firmly within our control."
+ factions.3005.a:0 "These patriots are to be commended."
+ factions.3005.desc.2:0 "The data we've been gathering about the political situation on [root.GetName] lends credence to many of our concerns. Fringe campaigns of a radical nature have managed to drum up support amongst the colony's population. These citizens have been swayed by sermons of social equity and mobility, and no longer subscribe to some of the founding principles of our society.\n\nDespite appearances though, this still amounts to good news. We've amassed a substantial body of research, invaluable for refining our theories about [owner.GetAdj] colonial politics. Moreover: by luring out such fringe elements, we have exposed these threats long before they could ever gain a foothold on the capital."
+ factions.3005.b:0 "Or... perhaps there is some merit to this thinking?"
+ planet_political_admittance:0 "Permissive Politics"
+ planet_political_admittance_desc:0 "This colony permits more disruptive forms of political discourse in exchange for better monitoring and sociological understanding."
+ factions.3005.desc.3:0 "The information we've been gathering about political campaigns on [root.GetName] has led to some interesting forecasts. We see a trend towards broader acceptance of new ideas - outside the bounds of what we would consider stable political thought - but no significant move towards radicalization.\n\nThough any deviation from our core message could be said to weaken our power base, this may still amount to good news. This experiment amounts to a substantial body of research, invaluable as we refine our theories about colonial politics. Moreover: we have proven that even when fringe elements are given some ground, the [owner.GetAdj] people refute their most radical elements, and stay relatively close to our nation's principles."
+ factions.3005.c:0 "Perhaps this conduct is to be encouraged, then."
+ factions.3010.desc.1:0 "Our political scientists have been observing [root.GetName] with keen interest. However, despite feverish campaigning and a lot of recent fuss in the media, they forecast a fairly typical outcome for the colony's political future.\n\nOur researchers note that 'no news' amounts to good news here: despite what some fringe elements in our society may claim, there are as yet no signs that [root.GetName] is being molded into a hotbed of autocracy. Democracy remains a founding principle there, for now."
+ factions.3010.a:0 "Perhaps we ought to shake things up."
+ factions.3010.desc.2:0 "It seems that some of the more authoritarian political bodies in our society have gained a foothold on [root.GetName]. Their campaigns were amongst many targeting this burgeoning colony, and although their apparent success isn't cause for alarm in itself: our political scientists believe some caution may be warranted. Democracy may not be as essential or as appealing to the [root.owner.GetAdj] of [root.GetName] as we first thought."
+ factions.3010.b:0 "A worthy test for our way of governance!"
+ factions.3010.c:0 "We must guard against threats to democracy."
+ factions.3010.desc.3:0 "Our political scientists have been monitoring [root.GetName] for some time, and their reports confirm a wide range of political opinions have taken root there.\n\nThere are no signs yet that [root.GetName] will descend into anarchy, or other similarly extreme modes of governance. However, this much political jockeying does still present [root.owner.GetAdj] democracy with some unique challenges - and potential risks, if more extreme factions manage to gain a foothold there."
+ factions.3010.frontier.tt:0 "The §Y$planet_political_frontier$§! modifier will remain for approximately §Y9§! years, increasing $MOD_POP_ETHICS_SHIFT_SPEED$ by §G+50%§!."
+ factions.3010.d:0 "These risks sound too great."
  faction.4.title:0 "Loyalist Demands"
  faction.4.desc:0 "The Loyalists are devoted to [Root.Owner.GetRulerTitle] [Root.Owner.GetRulerName] of the [Root.Owner.GetName], and have no demands."
  faction.6.title:0 "Hunger Strike!"
@@ -745,11 +777,3 @@
  faction.801.desc:0 "Fueled by desperation, some individuals currently subject to purges on [riot_planet.GetName] have seen fit to attack and raze one of the facilities on the planet."
  faction.803.title:0 "The [Root.GetName] Revolt!"
  faction.803.desc:0 "Fueled by desperation, demographics currently subject to purges on [death_planet.GetName] have taken up arms against the [Root.Owner.GetName], forming a ramshackle rebel force."
- henrik.1234.name:0 "§HTime-Shifted Primitives§!: Update"
- henrik.1234.desc:0 "The Observation Post orbiting the anomalous Primitive world §YTerra-1444§! has compiled a report on recent events.\n\n§S--- --- ---§!\n\nPlanetary year §Y1698§!:\nAn §Yunlikely diplomatic alliance§! unexpectedly staved off §Yan impending war§! against §Ya young ruler§! in §Ynorthern Europe§!.\n\n§S--- --- ---§!\n\nPlanetary year §Y1700§!:\nA §Ybranch of the increasingly-aberrant Habsburg sub-species§! died out in the §YEuropean§! sub-region of §YSpain§!.\n\n§S--- --- ---§!\n\nPlanetary year §Y1702§!:\nThe balance of power disruption in §Ywestern and southwestern Europe§! eventually §Ytriggered a bloody conflict§!."
- henrik.1234.a:0 "We pray that these savages never escape their globe."
- henrik.12344.name:0 "§HPrimitives§!: Update"
- henrik.12344.desc:0 "Following the conclusion of the §Y34th War of Ryukyu Aggression§!, the Primitive world of §YEarth-5§! is on the verge of global unification under a single government."
- henrik.12344.b:0 "Not on our watch, Shogun §RDDRJake§!."
- henrik.12344.b.tooltip:0 "Deploy all available Armies for a §YStarfall Invasion§!."
- henrik.12344.a:0 "We pray that these savages never escape their globe."
