--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -445,8 +445,12 @@
  tradition_subterfuge:0 "การวางอุบาย"
  tradition_subterfuge_desc:0 "การรักษาความปลอดภัยนั้นขึ้นอยู่กับ การเปิดเผยความลับของผู้อื่น และรักษาความลับของตัวเราเองไว้เป็นอย่างดี"
  tr_subterfuge_adopt:0 "วัฒนธรรมการวางอุบาย"
+ tr_subterfuge_adopt_desc:0 "§YSubterfuge§!-related technologies appear at §Y5§! times the normal rate."
  tr_subterfuge_finish:0 "วัฒนธรรมการวางอุบายสำเร็จ"
- tr_subterfuge_finish_desc:0 "เมื่อ §Yปฏิบัติการ§! สำเร็จจะได้เงินค่าใช้จ่ายคืน §G50%§! ของค่าใช้จ่ายตามระดับเลเวลการแทรกซึมของพวกเขา\nปลดล็อกการยกระดับ: §G+1§!"
+ tr_subterfuge_finish_effect:0 "Successful §YOperations§! refund §G50%§! of their Infiltration Level Cost."
+ tr_subterfuge_finish_desc:1 "$tr_subterfuge_finish_effect$\n$TRADITIONS_FINISH_AP$"
+ tr_subterfuge_cloaking_finish:0 "$tr_subterfuge_finish$"
+ tr_subterfuge_cloaking_finish_desc:0 "$tr_subterfuge_finish_effect$\n$MOD_SHIP_CLOAKING_STRENGTH_ADD$: §G+1§!\n$TRADITIONS_FINISH_AP$"
  tr_subterfuge_information_security:0 "ความปลอดภัยของข้อมูล"
  tr_subterfuge_information_security_delayed:1 "Only by embracing a tradition of secrecy can we protect vital information from prying eyes. Enhanced security systems and countermeasures deny our enemies any potential advantages."
  tr_subterfuge_nda:0 "ข้อตกลงที่ไม่เปิดเผย"
@@ -702,7 +706,7 @@
  allow_gaia:0 "ทำให้เราสามารถปรับสภาพดาวให้เป็น §Yดาวเคราะห์ไกอา§! ได้"
  no_rev_engineering:1 "ปฏิบัติการ §Y$operation_steal_technology$§! จะล้มเหลวโดยอัตโนมัติเมื่อใช้กับพวกเราและจักรวรรดิอื่นจะไม่สามารถนำ §Yเศษซากยานรบของเรา§! ที่ถูกทำลาย ไปศึกษาวิจัยได้"
  allow_raiding:0 "ปลดล็อกการทิ้งระเบิดแบบ §Y$bombardment_raiding$§! ซึ่งจะช่วยให้เราสามารถลักพาตัวประชากรจากดาวเคราะห์ที่ถูกปิดล้อมและย้ายประชากรมาที่โลกของเรา"
- ap_defender_of_the_galaxy_effect_opinion:0 "£opinion£ §Yทัศนคติ§! ของทุกจักรวรรดิเพิ่มขึ้น §G+20§!"
+ ap_defender_of_the_galaxy_effect_opinion:1 "Everyone's £opinion£ §YOpinion§! increased by §G+200§!"
  ap_defender_of_the_galaxy_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม : §G+50%§!"
  ap_engineered_evolution:0 "วิวัฒนาการทางพันธุวิศวกรรม"
  ap_the_flesh_is_weak:0 "ร่างกายเป็นสิ่งที่อ่อนแอ"
@@ -760,6 +764,8 @@
  ap_colossus_desc:0 "โครงการ 'โคลอสซัส' เป็นสถานที่ในฝันของความน่ากลัวและการป้องกันยับยั้ง ลองจินตนาการถึงยานที่ใหญ่ที่สุดซึ่งมีอาวุธที่สามารถทำลายล้างทั้งโลกได้"
  ap_enigmatic_engineering:0 "วิศวกรรมพิศวง"
  ap_enigmatic_engineering_desc:0 "เทคโนโลยีไม่ได้เป็นเพียงวิธีการแก้ปัญหา แต่เป็นภาษาที่เราก้าวไปไกลกว่าในทางโลก จิตใจที่ด้อยกว่าก็ไม่เข้าใจความก้าวหน้าของเรา"
+ ap_enigmatic_engineering_cloaking:0 "$ap_enigmatic_engineering$"
+ ap_enigmatic_engineering_cloaking_desc:0 "$ap_enigmatic_engineering_desc$"
  ap_nihilistic_acquisition:0 "การครอบครองสิ่งที่ไม่มีความหมาย"
  ap_nihilistic_acquisition_desc:0 "แนวคิดเรื่องการตัดสินใจด้วยตนเองไม่สามารถเป็นคุณธรรมที่สมบูรณ์ได้ เป้าหมายแบบองค์รวมค่ามีมากกว่าความกังวลของแต่ละบุคคลอย่างชัดเจน"
  ap_transcendent_learning:0 "การเรียนรู้ที่ดีเยี่ยม"
