--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -148,6 +148,8 @@
  HAS_NOT_SHIP_OWNER_TYPE:0 "Does NOT have $OWNERTYPE|Y$ as owner type"
  TRIGGER_IS_DESIGNABLE:0 "เป็นขนาดยานที่ออกแบบได้"
  TRIGGER_IS_NOT_DESIGNABLE:0 "ไม่ใช่ขนาดยานที่ออกแบบได้"
+ IS_CLOAKED:0 "Is cloaked"
+ IS_NOT_CLOAKED:0 "Is NOT cloaked"
  IS_CAPITAL_SYSTEM:0 "Is the capital system of an Empire"
  IS_NOT_CAPITAL_SYSTEM:0 "Is NOT the capital system of an Empire"
  IS_CAPITAL:0 "Is the capital of an Empire"
@@ -203,8 +205,12 @@
  TRIGGER_HAS_GOVERNMENT_AUTHORITY:0 "มีระบอบการปกครอง $KEY|Y$"
  TRIGGER_HAS_NOT_GOVERNMENT_AUTHORITY:1 "ไม่มีระบอบการปกครอง $KEY|Y$"
  HAS_GOVERNMENT_ICON_TIP:0 "This option is available due to $WHO|H$ being a $GOV|Y$"
- IS_PRIMITIVE:0 "ป่าเถื่อนดึกดำบรรพ์"
- IS_NOT_PRIMITIVE:0 "ไม่ป่าเถื่อนดึกดำบรรพ์"
+ IS_PRIMITIVE:1 "Is pre-FTL"
+ IS_NOT_PRIMITIVE:1 "Is NOT pre-FTL"
+ HAS_NEXT_PRE_FTL_AGE:0 "$COUNTRY|Y$ is pre-FTL and can advance tech age"
+ HAS_NOT_NEXT_PRE_FTL_AGE:0 "$COUNTRY|Y$ is NOT pre-FTL or can NOT advance tech age"
+ HAS_PRE_FTL_AGE:0 "$COUNTRY|Y$ is pre-FTL and is in the $AGE|Y$"
+ HAS_NOT_PRE_FTL_AGE:0 "$COUNTRY|Y$ is NOT pre-FTL or is NOT in the $AGE|Y$"
  IS_PIRATE:0 "เป็นโจรสลัด"
  IS_NOT_PIRATE:0 "ไม่เป็นโจรสลัด"
  IS_INSIDE_NEBULA:0 "อยู่ภายในเนบิวลา"
@@ -702,8 +708,8 @@
  COUNT_SPECIES_TRIGGER:0 "Number of species (excluding sub-species) according to the criteria is $COMPARATOR$ $NUM|Y$"
  COUNT_EXACT_SPECIES_NOT_TRIGGER:0 "Number of species (including sub-species) according to the criteria is NOT $COMPARATOR$ $NUM|Y$"
  COUNT_EXACT_SPECIES_TRIGGER:0 "Number of species (including sub-species) according to the criteria is $COMPARATOR$ $NUM|Y$"
- HAS_SPY_NETWORK_NOT_TRIGGER:0 "ไม่มีเครือข่ายสอดแนมที่ทำงานอยู่"
- HAS_SPY_NETWORK_TRIGGER:0 "มีเครือข่ายสอดแนมที่ยังทำงานอยู่"
+ HAS_SPY_NETWORK_NOT_TRIGGER:1 "Does NOT have active Spy Network"
+ HAS_SPY_NETWORK_TRIGGER:1 "Has active Spy Network"
  HAS_NOT_SPYNETWORK_VALUE_TRIGGER:0 "Spy Network has Value NOT $COMPARE$ $VALUE|Y$"
  HAS_SPYNETWORK_VALUE_TRIGGER:0 "Spy Network has Value $COMPARE$ $VALUE|Y$"
  IS_NOT_SPYNETWORK_LEVEL_TRIGGER:0 "Spy Network is Level NOT $COMPARE$ $NUM|Y$"
@@ -740,6 +746,8 @@
  IS_ESPIONAGE_OPERATION_CHAPTER_TRIGGER:0 "Current chapter is $COMPARE$ $NUM_COMPARE$"
  IS_NOT_ESPIONAGE_OPERATION_DAYS_LEFT_TO_ROLL_TRIGGER:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้าใหม่ ไม่$COMPARE$ $NUM_COMPARE$"
  IS_ESPIONAGE_OPERATION_LEFT_TO_ROLL_TRIGGER:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้าใหม่ $COMPARE$ $NUM_COMPARE$"
+ IS_ESPIONAGE_OPERATION_AUTO_ACCEPT_TRIGGER:0 "Auto accepts events automatically when they are ready"
+ IS_NOT_ESPIONAGE_OPERATION_AUTO_ACCEPT_TRIGGER:0 "Does NOT auto accept events automatically when they are ready"
  HAS_NOT_NUM_COUNTRIES:0 "Number of Empires is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_COUNTRIES:0 "Number of Empires is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_POP_PERCENTAGE:0 "Number of Pops is NOT $COMPARATOR$ $NUM|Y%$"
@@ -758,6 +766,16 @@
  NUM_SECTORS_NOT_TRIGGER:0 "Number of Sectors is NOT $COMPARATOR$ $NUM|Y$"
  NUM_RARE_TECHS_TRIGGER:0 "Number of researched rare technologies is $COMPARATOR$ $NUM|Y$"
  NUM_RARE_TECHS_NOT_TRIGGER:0 "Number of researched rare technologies is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_DANGEROUS_TECHS_TRIGGER: "Number of researched dangerous technologies is $COMPARATOR$ $NUM|Y$"
+ NUM_DANGEROUS_TECHS_NOT_TRIGGER: "Number of researched dangerous technologies is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_INSIGHT_TECHS_TRIGGER:0 "Number of researched insight technologies is $COMPARATOR$ $NUM|Y$"
+ NUM_INSIGHT_TECHS_NOT_TRIGGER:0 "Number of researched insight technologies is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_CUSTOM_TECH_1_TECHS_TRIGGER:0 "Number of researched rare technologies is $COMPARATOR$ $NUM|Y$"
+ NUM_CUSTOM_TECH_1_TECHS_NOT_TRIGGER:0 "Number of researched rare technologies is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_CUSTOM_TECH_2_TECHS_TRIGGER:0 "Number of researched insight technologies is $COMPARATOR$ $NUM|Y$"
+ NUM_CUSTOM_TECH_2_TECHS_NOT_TRIGGER:0 "Number of researched insight technologies is NOT $COMPARATOR$ $NUM|Y$"
+ NUM_CUSTOM_TECH_3_TECHS_TRIGGER:0 "Number of researched dangerous technologies is $COMPARATOR$ $NUM|Y$"
+ NUM_CUSTOM_TECH_3_TECHS_NOT_TRIGGER:0 "Number of researched dangerous technologies is NOT $COMPARATOR$ $NUM|Y$"
  NUM_REPEATABLE_TECHS_TRIGGER:0 "Number of researched repeatable technologies is $COMPARATOR$ $NUM|Y$"
  NUM_TECHS_TRIGGER:0 "Number of researched technologies is $COMPARATOR$ $NUM|Y$"
  NUM_TECHS_NOT_TRIGGER:0 "Number of researched technologies is NOT $COMPARATOR$ $NUM|Y$"
@@ -847,8 +865,8 @@
  HAS_NOT_HYPERLANE_TO_TRIGGER:0 "Does NOT have a Hyperlane connection to $TO|Y$"
  TRIGGER_IS_IRONMAN:0 "Game is in Ironman mode."
  TRIGGER_IS_NOT_IRONMAN:0 "Game is not in Ironman mode."
- COUNT_DEPOSITS:0 "Deposits $OPERATOR$$VALUE|Y$"
- COUNT_DEPOSITS_OF_TYPE:0 "$TYPE|Y$ Deposits $OPERATOR$$VALUE|Y$"
+ COUNT_DEPOSITS:1 "Deposits $OPERATOR$ $VALUE|Y$"
+ COUNT_DEPOSITS_OF_TYPE:1 "$TYPE|Y$ Deposits $OPERATOR$ $VALUE|Y$"
  HAS_GROUND_SUPPORT_STANCE:0 "Has ground support stance $STANCE|Y$"
  HAS_NOT_GROUND_SUPPORT_STANCE:0 "Does NOT have ground support stance $STANCE|Y$"
  HAS_POLICY:0 "มีนโยบาย $KEY|H$"
@@ -994,6 +1012,10 @@
  HAS_NOT_NUM_STARBASE_SIZES:1 "Number of Starbase $SIZE$ is NOT $COMPARE$ $NUM|Y$"
  IS_STARBASE_TYPE:0 "Is a $TYPE|Y$"
  IS_NOT_STARBASE_TYPE:0 "Is NOT a $TYPE|Y$"
+ HAS_NOT_CLOAKING_STRENGTH_VALUE_TRIGGER:0 "Cloaking Strength value is NOT $COMPARE$ $VALUE|Y$"
+ HAS_CLOAKING_STRENGTH_VALUE_TRIGGER:0 "Cloaking Strength value is $COMPARE$ $VALUE|Y$"
+ HAS_NOT_CLOAKING_DETECTION_VALUE_TRIGGER:0 "Cloaking Detection value is NOT $COMPARE$ $VALUE|Y$"
+ HAS_CLOAKING_DETECTION_VALUE_TRIGGER:0 "Cloaking Detection value is $COMPARE$ $VALUE|Y$"
  SET_ASTEROID_BELT_EFFECT:0 "Asteroid belt set in $SYSTEM$ at the distance of $DISTANCE|0$"
  REMOVED_ASTEROID_BELT_EFFECT:0 "Removed asteroid belt in $SYSTEM$"
  REMOVE_PLANET:0 "Removed planet $PLANET$"
@@ -1025,8 +1047,8 @@
  ADD_PHYSICS_RESEARCH_EFFECT:0 "$VALUE$ Physics research\n"
  ADD_SOCIETY_RESEARCH_EFFECT:0 "$VALUE$ Society research\n"
  ADD_ENGINEERING_RESEARCH_EFFECT:0 "$VALUE$ Engineering research\n"
- ADD_MODIFIER:0 "$MODNAME|Y$ ถูกเพิ่ม ซึ่งให้ผลดังนี้: \n$EFFECT$\n"
- ADD_MODIFIER_DAYS:0 "$MODNAME|Y$ จะมีผลเป็นระยะเวลา $TIME|Y$ $PERIOD$ ซึ่งให้ผลดังนี้:\n$EFFECT$\n"
+ ADD_MODIFIER:1 "$MODNAME|Y$ modifier added\n$EFFECT$\n"
+ ADD_MODIFIER_DAYS:1 "$MODNAME|Y$ modifier added for $TIME|Y$ $PERIOD$\n$EFFECT$\n"
  ADD_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
  REMOVE_OPINION_MODIFIER:1 "ทัศนคติ $SCOPE|Y$ ต่อ $COUNTRY|Y$ เปลี่ยนไป $VALUE$\n"
  REMOVE_OPINION_MODIFIER_ANY:1 "$SCOPE|Y$ removes the $MODNAME|Y$ opinion modifier towards anyone\n"
@@ -1040,8 +1062,12 @@
  SET_FLAG:0 "Set the $FLAGNAME|Y$ flag\n"
  REMOVE_FLAG:0 "Removes the $FLAGNAME|Y$ flag\n"
  ALL_OWNED_SHIPS:0 "§YAll Owned Ships:§!\n"
- SET_PRIMITIVE_EFFECT_YES:0 "Set primitive status\n"
- SET_PRIMITIVE_EFFECT_NO:0 "Removes primitive status\n"
+ SET_PRIMITIVE_EFFECT_YES:1 "Set pre-FTL status\n"
+ SET_PRIMITIVE_EFFECT_NO:1 "Removes pre-FTL status\n"
+ SET_AWARENESS:0 "Sets awareness to $AWARENESS|Y$\n"
+ ADD_AWARENESS:0 "Increases awareness by $AWARENESS|Y$\n"
+ GO_TO_NEXT_PRE_FTL_AGE:0 "Advances $COUNTRY|Y$ to the next Pre-FTL technology level\n"
+ SET_PRE_FTL_AGE:0 "Sets the Pre-FTL technology level for $COUNTRY|Y$ to the $AGE|Y$\n"
  CREATE_POP:1 "ประชากร $SPECIES|Y$ เพิ่ม 1\n"
  BUILD_POP:0 "One buildable Pop is built\n"
  MODIFY_DEVELOPMENT_POS:0 "Increase infrastructure by $VALUE|Y$\n"
@@ -1143,8 +1169,8 @@
  DISMANTLE_EFFECT:0 "The station is dismantled.\n"
  ACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is added"
  DEACTIVATE_ADVISOR:0 "The advisor for $COUNTRY|Y$ is removed"
- BEGIN_EVENT_CHAIN_EFFECT:0 "เริ่มเหตุการณ์ $NAME$\n\n"
- END_EVENT_CHAIN_EFFECT:0 "Ends the $NAME$ Event Chain\n\n"
+ BEGIN_EVENT_CHAIN_EFFECT:1 "Begins the $NAME$ Event Chain.\n\n"
+ END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain.\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ shifts its ethics towards $ETHIC|Y$\n"
  ADD_ETHIC_EFFECT:0 "\nได้รับจริยธรรม $ETHIC|Y$\n"
  CLEAR_ETHOS_EFFECT:0 "จริยธรรมทั้งหมดจะถูกลบ"
@@ -1172,10 +1198,13 @@
  ADD_BUILDING_EFFECT:1 "เพิ่ม £building£ $BUILDING|Y$ ไปที่ดาวเคราะห์"
  REMOVE_BUILDING_EFFECT:0 "ลบสิ่งปลูกสร้าง"
  REMOVE_ALL_BUILDINGS_EFFECT:1 "ลบสิ่งปลูกสร้างทั้งหมด"
+ REPAIR_ALL_BUILDINGS_EFFECT:0 "Repair All Buildings"
+ VALIDATE_AND_REPAIR_PLANET_BUILDINGS_AND_DISTRICTS_EFFECT:0 "Validate and Repair all buildings and districts"
  DOWNGRADE_ALL_BUILDINGS_EFFECT:0 "Downgrade all non-capital buildings"
  DOWNGRADE_ALL_BUILDINGS_OF_TYPE_EFFECT:0 "Downgrade all $TYPE$ buildings"
  REMOVE_SPECIFIC_BUILDING_EFFECT:0 "ลบ $BUILDING|Y$"
  RUIN_SPECIFIC_BUILDING_EFFECT:0 "Disable $BUILDING|Y$"
+ REPAIR_SPECIFIC_BUILDING_EFFECT:0 "Repair $BUILDING|Y$"
  DISABLE_SPECIFIC_BUILDING_EFFECT:0 "Ruin $BUILDING|Y$"
  ADD_DISTRICT_EFFECT:0 "เพิ่ม $DISTRICT|Y$ ไปที่ดาวเคราะห์"
  REMOVE_DISTRICT_EFFECT:0 "ลบเขต"
@@ -1224,6 +1253,8 @@
  HAS_NOT_NUM_TRAITS:0 "Number of Traits is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_TRAIT_POINTS:0 "Total Trait cost is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_TRAIT_POINTS:0 "Total Trait cost is NOT $COMPARATOR$ $NUM|Y$"
+ HAS_ROLE: "Has Role $ROLE|Y$"
+ HAS_NOT_ROLE: "Does NOT have Role $ROLE|Y$"
  NUM_MEMBERS:0 "$FEDERATION|Y$ has $COMPARATOR$ $VALUE|Y$ members"
  NUM_MEMBERS_NOT:0 "$FEDERATION|Y$ does NOT have $COMPARATOR$ $VALUE|Y$ members"
  NUM_ASSOCIATES:0 "$FEDERATION|Y$ has $COMPARATOR$ $VALUE|Y$ associates"
@@ -1761,7 +1792,7 @@
  HAS_NOT_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์ ไม่$COMPARATOR$ $TIER|Y$"
  SET_PLANETARY_ASCENSION_TIER:0 "ระดับของดาวเคราะห์เปลี่ยนเป็น $TIER|Y$"
  NUM_PLANETARY_ASCENSION_TIERS:0 "ระดับของดาวเคราะห์ทั้งหมด $COMPARATOR$ $TIER|Y$"
- NUM_PLANETARY_ASCENSION_TIERS_NOT:0 "ระดับของดาวเคราะห์ทั้งหมด ไม่$COMPARATOR$ $TIER|Y$"
+ NUM_PLANETARY_ASCENSION_TIERS_NOT:1 "Total Planetary Ascension Tiers is NOT $COMPARATOR$ $TIER|Y$"
  HAS_DEFENSIVE_ARMY_STRENGTH:0 "Garrison Strength is $COMPARATOR$ $VALUE|Y$"
  HAS_NOT_DEFENSIVE_ARMY_STRENGTH:0 "Garrison Strength is NOT $COMPARATOR$ $VALUE|Y$"
  HAS_PATH_TRIGGER:0 "$COUNTRY|Y$ follows the $PATH|Y$ Crisis Path"
@@ -1848,3 +1879,20 @@
  HAS_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ has $COMPARE$ $VAL1|2Y$ loyalty"
  HAS_MONTHLY_LOYALTY_LESS_THAN:0 "$SUBJECT|H$ does NOT have $COMPARE$ $VAL1|2Y$ monthly loyalty"
  HAS_MONTHLY_LOYALTY_AT_LEAST:0 "$SUBJECT|H$ has $COMPARE$ $VAL1|2Y$ monthly loyalty"
+ effect_every_archaeological_site:0 "Every Archeological Site"
+ AWARENESS_TRIGGER:0 "Awareness is $COMPARE$ $VALUE|Y$"
+ AWARENESS_NOT_TRIGGER:0 "Awareness is NOT $COMPARE$ $VALUE|Y$"
+ AWARENESS_STAGE_TRIGGER:0 "Awareness level is $COMPARE$ $STAGE|Y$"
+ AWARENESS_STAGE_NOT_TRIGGER:0 "Awareness level is NOT $COMPARE$ $STAGE|Y$"
+ TRIGGER_IS_UNDER_SOCIETAL_ENLIGHTENMENT:1 "Is receiving Societal Guidance from $TARGET|Y$"
+ TRIGGER_IS_NOT_UNDER_SOCIETAL_ENLIGHTENMENT:1 "Is not receiving Societal Guidance from $TARGET|Y$"
+ TRIGGER_IS_UNDER_OPEN_TECHNOLOGICAL_ENLIGHTENMENT:0 "Is receiving technology from $TARGET|Y$"
+ TRIGGER_IS_NOT_UNDER_OPEN_TECHNOLOGICAL_ENLIGHTENMENT:0 "Is not receiving technology from $TARGET|Y$"
+ TRIGGER_IS_UNDER_STRATIFIED_TECHNOLOGICAL_ENLIGHTENMENT:0 "Is receiving Stratified Technological Development from $TARGET|Y$"
+ TRIGGER_IS_NOT_UNDER_STRATIFIED_TECHNOLOGICAL_ENLIGHTENMENT:0 "Is not receiving Stratified Technological Development from $TARGET|Y$"
+ TRIGGER_HAS_PRE_FTL_TRADE:0 "Has trade with $TARGET|Y$"
+ TRIGGER_DOESNT_HAVE_PRE_FTL_TRADE:0 "Doesn't have $TARGET|Y$"
+ EFFECT_REMOVE_FROM_FEDERATION:0 "$COUNTRY$ is removed from the $FEDERATION$"
+ EFFECT_BREAK_TREATY:0 "$COUNTRY1$ break their $TREATY_TYPE$ with $COUNTRY2$"
+ EFFECT_CLEAR_RELATIONS: "Clear relations between country '$SCOPED_COUNTRY$' and country '$TARGET_COUNTRY$': $RELATION_KEYS$"
+ EFFECT_REMOVE_ENVOYS_TO: "Remove envoys assigned by $FROM_COUNTRY$ to $TO_COUNTRY$"
